exports[`network > network_get_request > should get request from previous navigations 1`] = `
## Request http://127.0.0.1:<port>/one
Status: 200
### Request Headers
- accept-language:<lang>
- upgrade-insecure-requests:1
- user-agent:<user-agent>
- sec-ch-ua:<redacted>
- sec-ch-ua-mobile:<redacted>
- sec-ch-ua-platform:<redacted>
- accept:text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7
- accept-encoding:gzip, deflate, br, zstd
- connection:keep-alive
- host:127.0.0.1:<port>
- sec-fetch-dest:<redacted>
- sec-fetch-mode:<redacted>
- sec-fetch-site:<redacted>
- sec-fetch-user:<redacted>
### Response Headers
- connection:keep-alive
- content-length:<redacted>
- content-type:text/html; charset=utf-8
- date:<long date>
- keep-alive:<redacted>
### Response Body
<not available anymore>
`;

exports[`network > network_list_requests > list requests form current navigations only 1`] = `
## Network requests
Showing 1-1 of 1 (Page 1 of 1).
reqid=3 GET http://127.0.0.1:<port>/three [200]
`;

exports[`network > network_list_requests > list requests from previous navigations 1`] = `
## Network requests
Showing 1-3 of 3 (Page 1 of 1).
reqid=1 GET http://127.0.0.1:<port>/one [200]
reqid=2 GET http://127.0.0.1:<port>/two [200]
reqid=3 GET http://127.0.0.1:<port>/three [200]
`;

exports[`network > network_list_requests > list requests from previous navigations from redirects 1`] = `
## Network requests
Showing 1-3 of 3 (Page 1 of 1).
reqid=1 GET http://127.0.0.1:<port>/redirect [302]
reqid=2 GET http://127.0.0.1:<port>/redirected [200]
reqid=3 GET http://127.0.0.1:<port>/redirected-page [200]
`;
